syntax = "proto3";

package cheers.type;

option go_package = "github.com/salazarhugo/cheers1/genproto/cheers/type/party;partypb";

import "google/type/latlng.proto";
import "google/protobuf/timestamp.proto";
import "cheers/type/privacy/privacy.proto";

message Party {
  string id = 1;
  string name = 2;
  string description = 3;
  string address = 4;
  google.type.LatLng latlng = 5;
  Privacy privacy = 6;
  string banner_url = 7;
  google.protobuf.Timestamp start_date = 8;
  google.protobuf.Timestamp end_date = 9;
  string host_id = 10;
  string location_name = 12;
  // The time when the party was created.
  google.protobuf.Timestamp create_time = 13;
}